cmake_minimum_required(VERSION 3.2)
project(myapp)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include_directories(inc cfg)
configure_file(${PROJECT_SOURCE_DIR}/cfg/hello_config.hpp.in ${PROJECT_BINARY_DIR}/inc/hello/hello_config.hpp)
add_executable(myapp src/hello.cpp src/main.cpp inc/hello/hello.hpp ${PROJECT_BINARY_DIR}/inc/hello/hello_config.hpp)
